package gameLaby.laby;

public abstract class Item extends Entite {

    public Item (int abscisse, int ordonne) {
        super(abscisse, ordonne);
    }
}
